feat: implemented user specific warnings
